// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Error should render properly with default values 1`] = `
<div>
  <h1>
    Something went wrong
  </h1>
  <h2>
    Check network connection and login
  </h2>
  <component-image-row
    height="600px"
    src="IMAGE_MOCK"
  />
</div>
`;

exports[`components/Error should render properly with non-default values 1`] = `
<div>
  <h1>
    Headline
  </h1>
  <h2>
    test
  </h2>
  <component-image-row
    height="600px"
    src="IMAGE_MOCK"
  />
  <component-row>
    <component-col
      xs="12"
    >
      <pre>
        {
  "a": {
    "b": 2
  }
}
      </pre>
    </component-col>
  </component-row>
</div>
`;
